fixed navigation problem on iphone 4 size screens portrait

--- a/css/home.css
+++ b/css/home.css
@@ -949,6 +949,7 @@ textarea{
 		text-align: right;
 		padding-right: 2px;
 		font-size: 10px;
+		margin-top: 7px;
 	}
 
 
